--- a/jdc-gui/src/com/solt/jdc/gui/view/Registration.fxml
+++ b/jdc-gui/src/com/solt/jdc/gui/view/Registration.fxml
@@ -7,7 +7,7 @@
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-<HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="680.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="680.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.solt.jdc.gui.view.RegistrationController">
    <children>
       <AnchorPane prefHeight="780.0" prefWidth="880.0">
          <children>
@@ -34,17 +34,8 @@
                   </HBox>
                   <DatePicker fx:id="dob" GridPane.columnIndex="2" GridPane.rowIndex="5" />
                   <TextField fx:id="phone" prefWidth="225.0" GridPane.columnIndex="2" GridPane.rowIndex="6" />
-                  <TextField fx:id="mail" prefWidth="200.0" GridPane.columnIndex="2" GridPane.rowIndex="7" />
-                  <ComboBox fx:id="townshop" prefHeight="28.0" prefWidth="177.0" promptText="Select Township" GridPane.columnIndex="2" GridPane.rowIndex="8">
-                     <items>
-                        <FXCollections fx:factory="observableArrayList">
-                           <String fx:value="Item 1" />
-                           <String fx:value="Item 2" />
-                           <String fx:value="Item 3" />
-                        </FXCollections>
-                     </items>
-                  </ComboBox>
-                  <TextField fx:id="address" prefWidth="200.0" GridPane.columnIndex="2" GridPane.rowIndex="9" />
+                  <TextField fx:id="email" prefWidth="200.0" GridPane.columnIndex="2" GridPane.rowIndex="7" />
+                  <ComboBox fx:id="townships" prefHeight="28.0" prefWidth="177.0" promptText="Select Township" GridPane.columnIndex="2" GridPane.rowIndex="8" />                  <TextField fx:id="address" prefWidth="200.0" GridPane.columnIndex="2" GridPane.rowIndex="9" />
                   <Label text="Personal Information" GridPane.columnIndex="1" GridPane.columnSpan="2147483647" GridPane.rowIndex="1">
                      <font>
                         <Font name="Agency FB Bold" size="30.0" />
@@ -56,24 +47,24 @@
                      </font>
                   </Label>
                   <Label text="Class" GridPane.columnIndex="1" GridPane.rowIndex="12" />
-                  <ComboBox prefHeight="28.0" prefWidth="298.0" promptText="Select Class" GridPane.columnIndex="2" GridPane.rowIndex="12" />
+                  <ComboBox fx:id="jdcClasses" prefHeight="28.0" prefWidth="298.0" promptText="Select Class" GridPane.columnIndex="2" GridPane.rowIndex="12" />
                   <Label text="Fee" GridPane.columnIndex="1" GridPane.rowIndex="13" />
                   <Label text="Discount" GridPane.columnIndex="1" GridPane.rowIndex="14" />
                   <Label text="Fees to paid" GridPane.columnIndex="1" GridPane.rowIndex="15" />
                   <Label text="Paid" GridPane.columnIndex="1" GridPane.rowIndex="16" />
                   <Label text="Remain" GridPane.columnIndex="1" GridPane.rowIndex="17" />
-                  <TextField editable="false" GridPane.columnIndex="2" GridPane.rowIndex="13" />
+                  <TextField fx:id="fee" editable="false" GridPane.columnIndex="2" GridPane.rowIndex="13" />
                   <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0" spacing="10.0" GridPane.columnIndex="2" GridPane.rowIndex="14">
                      <children>
-                        <RadioButton mnemonicParsing="false" text="No Discount" />
-                        <RadioButton mnemonicParsing="false" text="Java Developer Class" />
-                        <RadioButton mnemonicParsing="false" text="Nihon Ichi" />
-                        <RadioButton mnemonicParsing="false" text="Student Discount" />
+                        <RadioButton fx:id="noDiscount" mnemonicParsing="false" text="No Discount" />
+                        <RadioButton fx:id="jdc" mnemonicParsing="false" text="Java Developer Class" />
+                        <RadioButton fx:id="nhi" mnemonicParsing="false" text="Nihon Ichi" />
+                        <RadioButton fx:id="student" mnemonicParsing="false" text="Student Discount" />
                      </children>
                   </HBox>
-                  <TextField editable="false" GridPane.columnIndex="2" GridPane.rowIndex="15" />
-                  <TextField GridPane.columnIndex="2" GridPane.rowIndex="16" />
-                  <TextField editable="false" GridPane.columnIndex="2" GridPane.rowIndex="17" />
+                  <TextField fx:id="feesToPaid" editable="false" GridPane.columnIndex="2" GridPane.rowIndex="15" />
+                  <TextField fx:id="paid" GridPane.columnIndex="2" GridPane.rowIndex="16" />
+                  <TextField fx:id="remain" editable="false" GridPane.columnIndex="2" GridPane.rowIndex="17" />
                   <HBox prefHeight="100.0" prefWidth="200.0" spacing="10.0" GridPane.columnIndex="2" GridPane.rowIndex="18">
                      <children>
                         <Button mnemonicParsing="false" prefHeight="40.0" prefWidth="120.0" text="CLEAR" />
@@ -123,8 +114,8 @@
                   </Label>
                </children>
             </AnchorPane>
-            <TextField />
-            <ListView prefHeight="502.0" prefWidth="380.0" />
+            <TextField fx:id="filter" />
+            <ListView fx:id="studentList" prefHeight="502.0" prefWidth="380.0" />
          </children>
          <padding>
             <Insets left="10.0" right="10.0" />
