--- a/jdc-gui/src/com/solt/jdc/gui/MainFrame.fxml
+++ b/jdc-gui/src/com/solt/jdc/gui/MainFrame.fxml
@@ -12,22 +12,27 @@
    <top>
       <HBox prefHeight="80.0" prefWidth="1920.0" BorderPane.alignment="CENTER">
          <children>
-            <Button fx:id="registration" mnemonicParsing="false" prefHeight="100.0" prefWidth="320.0" text="Registration">
+            <Button fx:id="registration" mnemonicParsing="false" prefHeight="100.0" prefWidth="256.0" text="Registration">
                <font>
                   <Font name="Aharoni Bold" size="30.0" />
                </font>
             </Button>
-            <Button fx:id="admin" mnemonicParsing="false" prefHeight="100.0" prefWidth="320.0" text="Admin">
+            <Button fx:id="admin" mnemonicParsing="false" prefHeight="100.0" prefWidth="256.0" text="Admin">
                <font>
                   <Font name="Aharoni Bold" size="30.0" />
                </font>
             </Button>
-            <Button fx:id="students" mnemonicParsing="false" prefHeight="100.0" prefWidth="320.0" text="Students">
+            <Button fx:id="students" mnemonicParsing="false" prefHeight="100.0" prefWidth="256.0" text="Students">
                <font>
                   <Font name="Aharoni Bold" size="30.0" />
                </font>
             </Button>
-            <Button fx:id="close" mnemonicParsing="false" prefHeight="100.0" prefWidth="320.0" text="Close">
+            <Button fx:id="balance" mnemonicParsing="false" prefHeight="100.0" prefWidth="256.0" text="Balance">
+               <font>
+                  <Font name="Aharoni Bold" size="30.0" />
+               </font>
+            </Button>
+            <Button fx:id="close" mnemonicParsing="false" prefHeight="100.0" prefWidth="256.0" text="Close">
                <font>
                   <Font name="Aharoni Bold" size="30.0" />
                </font>
