edit students view

--- a/jdc-gui/src/com/solt/jdc/gui/view/Students.fxml
+++ b/jdc-gui/src/com/solt/jdc/gui/view/Students.fxml
@@ -23,7 +23,7 @@
                   <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0" spacing="10.0" GridPane.columnIndex="2" GridPane.rowIndex="2">
                      <children>
                         <TextField fx:id="name" editable="false" prefHeight="25.0" prefWidth="292.0" />
-                        <Button mnemonicParsing="false" onAction="#edit" prefHeight="25.0" prefWidth="67.0" text="Edit" />
+                        <Button fx:id="edit" disable="true" mnemonicParsing="false" prefHeight="25.0" prefWidth="67.0" text="Edit" />
                      </children>
                   </HBox>
                   <TextField fx:id="nrc" editable="false" prefWidth="200.0" GridPane.columnIndex="2" GridPane.rowIndex="3" />
@@ -96,7 +96,7 @@
                                     <TextField fx:id="paid" editable="false" GridPane.columnIndex="1" GridPane.rowIndex="3" />
                                     <TextField fx:id="remain" editable="false" GridPane.columnIndex="1" GridPane.rowIndex="4" />
                                     <TextField fx:id="pay" GridPane.columnIndex="1" GridPane.rowIndex="5" />
-                                    <Button mnemonicParsing="false" onAction="#paid" prefHeight="25.0" prefWidth="156.0" text="Submit" GridPane.columnIndex="1" GridPane.rowIndex="6" />
+                                    <Button fx:id="submit" mnemonicParsing="false" prefHeight="25.0" prefWidth="156.0" text="Submit" GridPane.columnIndex="1" GridPane.rowIndex="6" />
                                  </children>
                               </GridPane>
                            </children>
