--- a/SmartBoy/res/layout/grid_menu_item.xml
+++ b/SmartBoy/res/layout/grid_menu_item.xml
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
     android:orientation="vertical"
     android:gravity="center" >
 
     <ImageView
         android:id="@+id/menu_image"
-        android:layout_width="120dp"
-        android:layout_height="100dp"
+        android:layout_width="150dp"
+        android:layout_height="120dp"
         android:contentDescription="@string/table_details"
-        android:src="@drawable/main_table_grid_item" />
+        android:src="@drawable/ykko" />
 
     <TextView
         android:id="@+id/menu_name"
