--- a/SmartBoy/res/menu/new_order.xml
+++ b/SmartBoy/res/menu/new_order.xml
@@ -4,9 +4,10 @@
     tools:context="com.solt.jdc.smartboy.NewOrderActivity" >
 
     <item
-        android:id="@+id/action_settings"
+        android:id="@+id/action_check"
+        android:icon="@drawable/ic_action_check"
         android:orderInCategory="100"
         android:title="@string/action_settings"
-        app:showAsAction="never"/>
+        app:showAsAction="ifRoom"/>
 
 </menu>
